fixed bug in safe eval fixed version number in 0.0.3 tag added 'fl' arg to xid requests rewrote some docstrings
--HG--
extra : convert_revision : svn%3A9bbe1849-123c-0410-9313-83ec163a5258/python/worldcat/trunk%40554

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ DESCRIPTION
 
 worldcat is a Python module that works with OCLC's WorldCat Affiliate web
 services (see <http://www.worldcat.org/affiliate/>). worldcat currently works
-with the WorldCat Search, xISBN, xISSN, and xOCLCNUM APIs.
+with the WorldCat Search and xID (xISBN, xISSN, and xOCLCNUM) APIs.
 
 Requests to the WorldCat Search API key require an API key provided by OCLC
 (see <http://www.worldcat.org/affiliate/tools?atype=wcapi>).
@@ -28,7 +28,7 @@ TODO
 ----
 
 - Develop test suite
-- Write documentation
+- Write detailed documentation
 
 LICENSE
 -------
