- Added iterators to SRURequest and OpenSearchRequest in worldcat.request.search. These need testing, so please submit any feedback.
- Correcting, adding, and cleaning up docstrings

--HG--
extra : convert_revision : svn%3A9bbe1849-123c-0410-9313-83ec163a5258/python/worldcat/trunk%40567

--- a/README
+++ b/README
@@ -29,6 +29,8 @@ TODO
 
 - Develop test suite
 - Write detailed documentation
+- Add support for WorldCat Identities, Terminologies Services, Metadata Crosswalk
+  Services, and WorldCat Registry Search
 
 LICENSE
 -------
