--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v0.1.0 Thu Nov  6 01:05:50 EST 2008
+- Added iterators to SRURequest and OpenSearchRequest in worldcat.request.search.
+  These need testing, so please submit any feedback.
+  
+- Correcting, adding, and cleaning up docstrings
+
 v0.0.6 Tue Sep 16 17:56:37 EDT 2008
 - Fix in worldcat.util.extract.pymarc_extract where the XML handlers grew
   uncontrollably
