--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+v0.1.2 Fri Nov  7 09:06:20 EST 2008
+- Switched to dual licensing under GPL and BSD for OCLC Hackathon (thanks to
+  Thomas Dukleth for bringing this to my attention).
+
 v0.1.1 Thu Nov  6 11:37:58 EST 2008
 - Added LCCN support in worldcat.request.xid and other updates based upon
   http://worldcat.org/devnet/blog/2008/11/lccn_support_and_other_improve.html
