--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+v0.1.3 Fri Nov  7 16:41:15 EST 2008
+- Fixed bug in worldcat.request.search.CitationRequest
+- added examples directory
+
 v0.1.2 Fri Nov  7 09:06:20 EST 2008
 - Switched to dual licensing under GPL and BSD for OCLC Hackathon (thanks to
   Thomas Dukleth for bringing this to my attention).
