--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+v0.1.4 Sat Nov  8 10:13:50 EST 2008
+- Bug fix where exceptions weren't imported into worldcat.request.search and 
+  worldcat.request.xid
+- Added docstrings to example code
+
 v0.1.3 Fri Nov  7 16:41:15 EST 2008
 - Fixed bug in worldcat.request.search.CitationRequest
 - added examples directory and get related works example code
