--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
+v0.2.1 Fri Jan 16 Sat Jan 17 03:53:28 EST 2009
+- minor bug fix to worldcat.response.search
+- added new "holdingsmap" prototype to examples
+
 v0.2.0 Sun Dec 14 23:08:04 EST 2008
-- The following changes implement the changes to the WorldCat Search APIs 
-  that were made on December 7, 2008.
+- The following changes implement the changes to the WorldCat Search
+  APIs that were made on December 7, 2008.
 - THIS MAY BREAK YOUR CODE: worldcat.request.search.HoldingsRequest has been
   renamed worldcat.request.search.LibrariesRequest. This class also allows you
   to retrieve a list of nearby libraries.
-- Any request that will return citations now supports the cformat parameter set
-  to "all."
+- Any request that will return citations now supports the cformat parameter 
+  set to "all."
 
 v0.1.4 Sat Nov  8 10:13:50 EST 2008
 - Bug fix where exceptions weren't imported into worldcat.request.search and 
@@ -25,8 +29,8 @@ v0.1.1 Thu Nov  6 11:37:58 EST 2008
   http://worldcat.org/devnet/blog/2008/11/lccn_support_and_other_improve.html
 
 v0.1.0 Thu Nov  6 01:05:50 EST 2008
-- Added iterators to SRURequest and OpenSearchRequest in worldcat.request.search.
-  These need testing, so please submit any feedback.
+- Added iterators to SRURequest and OpenSearchRequest in
+  worldcat.request.search These need testing, so please submit any feedback.
   
 - Correcting, adding, and cleaning up docstrings
 
