Modified request.xid.xOCLCNUMRequest to process requests for OCLC numbers,   LCCNs, and OCLC work identifiers; removed request.xid.xLCCNRequest

--- a/README
+++ b/README
@@ -34,6 +34,7 @@ TODO
 - Write detailed documentation
 - Add support for WorldCat Identities, Terminologies Services, Metadata 
   Crosswalk Services, and WorldCat Registry Search
+- Add access token support to xISBN and xISSN requests
 
 LICENSE
 -------
