--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+v0.3.2 Sun Jun 14 22:24:12 EDT 2009
+- Modified request.xid.xOCLCNUMRequest to process requests for OCLC numbers,
+  LCCNs, and OCLC work identifiers; removed request.xid.xLCCNRequest
+
 v0.3.1 Thu May 28 15:51:16 EDT 2009
 - Addition of examples/gae, a sample Google App Engine applications for doing
   WorldCat queries with JSONP output. Thanks to Etienne Posthumus.
