Fake version bump for updated example docs and total move to github hosting

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+v0.3.5a Thu Nov 11 21:07:22 EST 2010
+- Version bump to update project pages, etc.
+
 v0.3.4 Thu Jul  2 20:20:22 EDT 2009
 - Fixing an error in the recently modified request.xid.xOCLCNUMRequest
 
