--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+v0.3.6 Tue Mar  6 11:07:04 EST 2012
+- worldcat.util.safeeval: Only use the major and minor Python version to
+  determine supported opcodes; sometimes the patch version is not an
+  integer, ie. "2.7.2+" (thanks to Devin Sevilla).
+- worldcat.request.xid: worldcat.request.xid: xISBNRequest has a 'hyphen'
+  method; xISSNRequest does not.
+
 v0.3.5a Thu Nov 11 21:07:22 EST 2010
 - Version bump to update project pages, etc.
 
